Adaugare Dashboard Admin cu functii de gestionare comenzi, plati, utilizatori

--- a/eUseControl.BeekeepingStore/Web.config
+++ b/eUseControl.BeekeepingStore/Web.config
@@ -10,13 +10,7 @@
   </configSections>
   <connectionStrings>
     <remove name="LocalSqlServer" />
-    <add name="eUseControl.BeekeepingStore" 
-		 connectionString="Data Source=REDSHKI\SQLEXPRESS;
-		 Initial Catalog=eUseControl.BeekeepingStore;
-		 Integrated Security=True;
-		 MultipleActiveResultSets=True;
-		 Application Name=EntityFramework" 
-		 providerName="System.Data.SqlClient" />
+    <add name="eUseControl.BeekeepingStore" connectionString="Data Source=REDSHKI\SQLEXPRESS;    Initial Catalog=eUseControl.BeekeepingStore;    Integrated Security=True;    MultipleActiveResultSets=True;    Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
